--- a/cfg/binds.cfg
+++ b/cfg/binds.cfg
@@ -10,10 +10,10 @@
 //bind_US_standard "s" 			 			"+backward" 	0	 // # movement
 //bind_US_standard "d" 			 			"+moveright" 	0	 // # |
 // #------------------------------------------------------------ // #  
-  bind_US_standard "w"			 			"+mfwd"			0	 // # null-cancel movement
-  bind_US_standard "a" 			 			"+mleft" 		0	 // # binds
-  bind_US_standard "s" 			 			"+mback" 		0	 // # |
-  bind_US_standard "d" 			 			"+mright" 		0	 // # |
+  bind			   "w"			 				"+mfwd"		0	 // # null-cancel movement
+  bind             "a" 			 				"+mleft" 	0	 // # binds
+  bind			   "s" 			 				"+mback" 	0	 // # |
+  bind 			   "d" 			 				"+mright" 	0	 // # |
 // #------------------------------------------------------------ // #  
   bind "MWHEELUP"                                "+jump;+forward"// # tap-strafe
   bind "MWHEELDOWN"                              "+jump"         // # bhop
