--- a/cfg/binds.cfg
+++ b/cfg/binds.cfg
@@ -29,10 +29,10 @@
 //bind_US_standard "s" 			 			"+backward" 	0	               // # movement
 //bind_US_standard "d" 			 			"+moveright" 	0	               // # |
 // #------------------------------------------------------------ // #  
-  bind			       "w"			 			"+mfwd"		    0	               // # null-cancel movement
-  bind             "a" 			 			"+mleft" 	    0	               // # binds
-  bind			       "s" 			 			"+mback" 	    0	               // # |
-  bind 			       "d" 			 			"+mright" 	  0	               // # |
+  bind			       "w"			 			"+mfwd"		    	               // # null-cancel movement
+  bind             "a" 			 			"+mleft" 	                     // # binds
+  bind			       "s" 			 			"+mback" 	                     // # |
+  bind 			       "d" 			 			"+mright" 	                   // # |
 // #------------------------------------------------------------ // #  
   bind "MWHEELUP"                                "+jump;+forward"// # tap-strafe
   bind "MWHEELDOWN"                              "+jump"         // # bhop
