--- a/cfg/settings.cfg
+++ b/cfg/settings.cfg
@@ -6,8 +6,25 @@
   m_acceleration                                 "0"             // #
   m_rawinput                                     "1"             // #
   m_customaccel                                  "0"             // # custom mouse acceleration
-  mouse_sensitivity                              "1.1"           // #
-  mouse_zoomed_sensitivity_scalar_0              "1.2539602849"  // #
+  mouse_sensitivity                              "1.1"           // # CHANGE THIS TO PREFERENCE
+  mouse_zoomed_sensitivity_scalar_0              "1.2539602849"  // # scalar for 90 fov
+                                                                 // #
+// #------------------------------------------------------------ // #
+// #                            FOV	                             // #
+// #------------------------------------------------------------ // #
+                                                                 // # perfect FOV (https://www.reddit.com/r/apexuniversity/comments/fgu5fi/youre_playing_on_the_wrong_fov/)
+  cl_fovScale 									 "1.2857"		 // # 90 	FOV
+//cl_fovScale 									 "1.4857"		 // # 104 	FOV (uncomment to use)
+//cl_fovScale 									 "1.5714"		 // # 110 	FOV	|
+  mouse_use_per_scope_sensitivity_scalars 		 "1"             // # disable for regular sens to scale (incorrectly) or plug in settings to https://jscalc-blog.com/apex-legends-calculator/ to find your own values)
+  mouse_zoomed_sensitivity_scalar_0 			 "1.0"           // # hipfire 	1 to 1 sens 90 fov
+  mouse_zoomed_sensitivity_scalar_1 			 "1.25395769"    // # 1x 		1 to 1 sens 90 fov
+  mouse_zoomed_sensitivity_scalar_2 			 "2.16336497"    // # 2x 		1 to 1 sens 90 fov
+  mouse_zoomed_sensitivity_scalar_3 		 	 "3.29313907"    // # 3x 		1 to 1 sens 90 fov
+  mouse_zoomed_sensitivity_scalar_4 			 "1.0"    		 // # I don't prefer 1 to 1 sense for these
+  mouse_zoomed_sensitivity_scalar_5 			 "1.0"           // # |
+  mouse_zoomed_sensitivity_scalar_6 			 "1.0"           // # |
+  mouse_zoomed_sensitivity_scalar_7 			 "1.0"           // # |
                                                                  // #
 // #------------------------------------------------------------ // #
 // #                             Hud                             // #
@@ -60,13 +77,13 @@
 // # ----------------------------------------------------------- // #
 																 // #
   rate 											"128000"		 // #
-  //cl_cmdbackup 								"2" 			 // # default
-  //cl_resend 									"0.5"			 // # default
+//cl_cmdbackup 								"2" 			 // # default
+//cl_resend 									"0.5"			 // # default
   cl_interp 									"0"				 // #
   cl_interp_ratio 								"2" 			 // #
-  //cl_interp_all 								"0" 	 	 	 // #
+//cl_interp_all 								"0" 	 	 	 // #
   cl_interpolate 								"1" 	 	 	 // #
-  //cl_interpolation_before_prediction 			"0" 	 	     // #
+//cl_interpolation_before_prediction 			"0" 	 	     // #
   cl_cmdrate 									"120"			 // # default 60
   cl_updaterate_mp 								"60" 			 // # default 20
   match_updateRate 								"60" 			 // #
@@ -86,7 +103,6 @@
   in_usekeyboardsampletime 						"0"				 // #
   filesystem_buffer_size 						"8192"			 // #
   filesystem_max_stdio_read 					"32"			 // #
-                                                                 // #
 																 // #
 // # ----------------------------------------------------------- // #
 // #                             Audio                           // #
@@ -95,12 +111,12 @@
   miles_channels 								"2"				 // #
   miles_occlusion 								"0" 			 // #
   miles_occlusion_force 						"0"				 // #
-  miles_occlusion_partial 						"0"	    		 // #
-  miles_max_sounds_per_server_frame 			"400"			 // # default 50
-  cl_footstep_event_max_dist 					"5000"	  		 // # default 2500
-  miles_occlusion 								"0"				 // #
-  miles_occlusion_force 						"0"				 // #
-  miles_occlusion_partial 						"0"				 // #
+  miles_occlusion_partial 						"0"	    		 // # Maximum number of sounds per server frame.
+  miles_max_sounds_per_server_frame 			"400"			 // # Default 50
+  cl_footstep_event_max_dist 					"5000"	  		 // # Default 2500. Set the max distance from where footsteps can be heard. 
+  miles_occlusion 								"0"				 // # When nonzero, perform occlusion checks.
+  miles_occlusion_force 						"0"				 // # 0 to 100: Force all sounds to have occlusion values of 0 (unoccluded) to 100 (completely occluded). -1 for normal.
+  miles_occlusion_partial 						"0"				 // # When zero, occlusion state is binary. When nonzero, allow partial occlusion of audio.
   snd_mixahead 									"0.05"			 // #
   snd_headphone_pan_exponent 					"2"				 // #
   snd_musicvolume 								"0"				 // #
@@ -114,3 +130,4 @@
   telemetry_client_enable 						"0"				 // #
   telemetry_client_sendInterval 				"0"				 // #
   pin_opt_in 									"0"				 // #
+// # ----------------------------------------------------------- // #
