--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,3 +1,5 @@
 exec settings
 exec gfx
 exec binds
+
+bind_US_standard	"P"		"exec autoexec" 	// # Allows  changes to autoexec.cfg to be loaded mid-game
