--- a/cfg/gfx.cfg
+++ b/cfg/gfx.cfg
@@ -1,154 +1,64 @@
-cl_fovScale "1.2857"		//90 fov
-cl_forcepreload 1
-mat_compressedtextures 1
-cl_ragdoll_collide 0
-
-fps_max 190
-	// Unlocks Framerate
-
-mat_picmip 3
-	// Basically this is the texture Quality controller of the
-	// game 4 = Lowest ... 1 = High
-
-stream_memory "307200"
-	// Change this to 0 if you want to use mat_picmip 4 (default 307200)
-
-mat_forceaniso 0
-
-ssao_enabled 0
-	// Disables SSAO
-
-shadow_enable 0
-shadow_maxdynamic 0
-shadow_max_dynamic 0
-shadow_depth_dimen_min 0
-shadow_depth_upres_factor_max 0
-
-r_decals 0
-	// Removes Bullet Impacts
-
-particle_cpu_level 0
-	// Reduces the quality of particles
-
-cl_ragdoll_maxcount 0
-	// Disables Ragdoll
-
-cl_particle_fallback_multiplier 0
-	// Multiplier for falling back to cheaper effects under load
-
-cl_particle_fallback_base 0	
-	// Base for falling back to cheaper effects under load
-
-noise_filter_scale 0
-	// Removes Film-grain
-	
-mat_bloom_scalefactor_scalar 0
-	// Disables bloom
-
-r_createmodeldecals 0
-	// Game does not create decals
-
-mat_disable_bloom 1
-	// Disables Glow spread of the light
-
-mat_mip_linear 0
-
-cl_gib_allow 0
-
-sssss_enable 0
-
-staticProp_budget 1
-staticProp_max_scaled_dist 250
-
-func_break_max_pieces 1
-
-cheap_captions_fadetime 0
-
-cl_minimal_rtt_shadows 1
-
-// Set the max distance from where footsteps can be heard.
-cl_footstep_event_max_dist 5000
-
-//
-cl_gib_allow 0
-
-// Multiplier for falling back to cheaper effects under load.
-cl_particle_fallback_multiplier 0
-
-//
-cl_particle_max_count 10
-
-//
-cl_ragdoll_maxcount 0
-
-//
-cl_ragdoll_self_collision 0
-
-// Depth-of-Field
-dof_enable 0
-
-// Note that you need to set map_settings_override to 1 in order for this command to have any effect. This command will enable and disable fog effects on your current map.
-fog_enable 0
+// # ----------------------------------------------------------- // #
+// #                        General	                             // #
+// # ----------------------------------------------------------- // #
+																 // #
+  cl_forcepreload 					"1"	                         // # disable if experiencing lag or stutter
+  mat_compressedtextures 			"1"	                         // # disable if experiencing lag or stutter
+  fps_max 							"190"						 // # keep this value between your max output and your monitor refresh rate. Don't use unlimited FPS. 
+  cl_ragdoll_collide 				"0"                          // #
+  cl_ragdoll_maxcount 				"0"                          // #
+  cl_ragdoll_self_collision 		"0"                          // #
+  cl_gib_allow 						"0"                          // #
+// # ----------------------------------------------------------- // #
+// #                        Visibility                           // #
+// # ----------------------------------------------------------- // #
+																 // #
+  map_settings_override 			"1"							 // # If this is enabled then the following ConVars will be functional and override the maps current value: fog_enable, mat_bloomscale.
+  r_decals 							"0"							 // # Removes Bullet Impacts
+  particle_cpu_level 				"0"							 // # Reduces the quality of particles
+  cl_particle_fallback_multiplier 	"0"							 // # Multiplier for falling back to cheaper effects under load
+  cl_particle_fallback_base 		"0"							 // # Base for falling back to cheaper effects under load
+  cl_particle_max_count 			"10"						 // #
+  mat_reduceparticles 				"1"                          // #
+  noise_filter_scale 				"0"							 // # Removes Film-grain
+  mat_bloom_scalefactor_scalar 		"0"							 // # Disables bloom
+  r_createmodeldecals 				"0"							 // # Game does not create decals
+  mat_disable_bloom 				"1"							 // # Disables Glow spread of the light
+  mat_mip_linear 					"0"                          // #
+  cl_gib_allow 						"0"                          // #
+  staticProp_budget 				"1"                          // #
+  staticProp_max_scaled_dist 		"250"                        // #
+  func_break_max_pieces 			"1"                          // #
+  cheap_captions_fadetime 			"0"                          // #
+  mat_picmip 						"3"							 // # Lowers quality to give massive fps boost (4 lowest quality, 1 highest)
+  stream_memory 					"307200"					 // # Change this to 0 if you want to use mat_picmip 4 (default 307200)
+  mat_queue_mode 					"2"                          // #
+  mat_forceaniso 					"0"                          // #
+  ssao_enabled 						"0"							 // # Disable SSAO
+  ssao_blur 						"0"                          // #
+  sssss_enable 						"0"                          // #
+  dof_enable 						"0"                          // #
+  fog_enable 						"0"                          // #
+  fog_enableskybox 					"0"                          // #
+  mat_bloom_scalefactor_scalar 		"0"                          // #
+  mat_bloomscale 					"0"                          // #
+  mat_debug_tonemapping_disable 	"1"                          // #
+  mat_depthfeather_enable 			"0"                          // #
+  mat_disable_bloom 				"1"                          // #
+  mat_motion_blur_enabled 			"0"                          // #
+  mat_screen_blur_enabled 			"0"                          // #
+  r_blurmenubg 						"0"                          // #
+  cl_minimal_rtt_shadows 			"1"                          // #
+  shadow_enable 					"0"                          // #
+  shadow_maxdynamic 				"0"                          // #
+  shadow_max_dynamic 				"0"                          // #
+  shadow_depth_dimen_min 			"0"                          // #
+  shadow_depth_upres_factor_max 	"0"                          // #
+// # ----------------------------------------------------------- // #
 
 
-// This command will enable (1, default) whether or not fog should be applied to the skybox.
-fog_enableskybox 0
-
-//
-mat_bloom_scalefactor_scalar 0
-
-// Sets the amount (scale) of HDR blooming. Higher values equal more blooming. Values beyond 16 should not be used in most cases.
-mat_bloomscale 0
-
-//
-mat_debug_tonemapping_disable 1
-
-//
-mat_depthfeather_enable 0
-
-//
-mat_disable_bloom 1
 
 
-//
-mat_motion_blur_enabled 0
 
 
-//
-mat_reduceparticles 1
 
-// If this is enabled then the following ConVars will be functional and override the maps current value: fog_enable, mat_bloomscale.
-map_settings_override 1
-
-// Enables screen blur render step.
-mat_screen_blur_enabled 0
-
-// Maximum number of sounds per server frame.
-miles_max_sounds_per_server_frame 400
-
-// When nonzero, perform occlusion checks.
-miles_occlusion 0
-
-// 0 to 100: Force all sounds to have occlusion values of 0 (unoccluded) to 100 (completely occluded). -1 for normal.
-miles_occlusion_force 0
-
-// When zero, occlusion state is binary. When nonzero, allow partial occlusion of audio.
-miles_occlusion_partial 0
-
-// Film-grain.
-noise_filter_scale 0.000
-
-// Blurs background when menus are open.
-r_blurmenubg 0
-
-// Screen space ambient occlusion blur.
-ssao_blur 0
-
-// Screen space ambient occlusion.
-ssao_enabled 0
-
-// Enable screen-space subsurface scattering.
-sssss_enable 0
-
-mat_compressedtextures "1"
-mat_queue_mode "2"
