--- a/cfg/binds.cfg
+++ b/cfg/binds.cfg
@@ -4,20 +4,20 @@
 // #    KEY                                      ACTION          // #
 // #------------------------------------------------------------ // #
                                                                  // #
-  bind_US_standard "w"			 			"+forward"		0	               // # Uncomment if you
-  bind_US_standard "a" 			 			"+moveleft" 	0	               // # don't want null-cancel
-  bind_US_standard "s" 			 			"+backward" 	0	               // # movement
-  bind_US_standard "d" 			 			"+moveright" 	0	               // # |
+bind_US_standard "w"			 			"+forward"		0	                 // # Uncomment if you
+bind_US_standard "a" 			 			"+moveleft" 	0	                 // # don't want null-cancel
+bind_US_standard "s" 			 			"+backward" 	0	                 // # movement
+bind_US_standard "d" 			 			"+moveright" 	0	                 // # |
 // #------------------------------------------------------------ // #  
-  bind "MWHEELUP"                                "+jump;+forward"// # tap-strafe
-  bind "MWHEELDOWN"                              "+jump"         // # bhop
-  bind "SPACE"                                   "+jump"         // #
-  bind "LSHIFT"        							 "+speed"		                 // # don't use +speed anywhere else or else you can loose scope zoom functionality
+bind "MWHEELUP"                 "+jump;+forward"                 // # tap-strafe
+bind "MWHEELDOWN"               "+jump"                          // # bhop
+bind "SPACE"                    "+jump"                          // #
+bind "LSHIFT"                   "+speed"		                     // # don't use +speed anywhere else or else you can loose scope zoom functionality
 // #------------------------------------------------------------ // #    
-  bind "5"                       "use_consumable HEALTH_SMALL"   // # |
-  bind "c"                       "use_consumable HEALTH_LARGE"   // # |
-  bind "4"                       "use_consumable SHIELD_SMALL"   // # CHECK THIS
-  bind "CAPSLOCK"                "use_consumable SHIELD_LARGE"   // # |
-  bind "x"                       "use_consumable PHOENIX_KIT "   // # |
-  bind "MOUSE2"                                        "+zoom"   // # |
+bind "5"                       "use_consumable HEALTH_SMALL"     // # |
+bind "c"                       "use_consumable HEALTH_LARGE"     // # |
+bind "4"                       "use_consumable SHIELD_SMALL"     // # change these to preference
+bind "CAPSLOCK"                "use_consumable SHIELD_LARGE"     // # |
+bind "x"                       "use_consumable PHOENIX_KIT "     // # |
+bind "MOUSE2"                                        "+zoom"     // # |
 // #------------------------------------------------------------ // #  
