--- a/cfg/settings.cfg
+++ b/cfg/settings.cfg
@@ -12,53 +12,53 @@
 // #                            FOV	                         // #
 // #------------------------------------------------------------ // #
                                                                  // # perfect FOV (https://www.reddit.com/r/apexuniversity/comments/fgu5fi/youre_playing_on_the_wrong_fov/)
-  cl_fovScale 					"1.2857"	 // # 90 	FOV
-//cl_fovScale 					"1.4857"	 // # 104 	FOV (uncomment to use)
-//cl_fovScale 					"1.5714"	 // # 110 	FOV	|
-  mouse_use_per_scope_sensitivity_scalars 	"1"              // # disable for regular sens to scale (incorrectly) or plug in settings to https://jscalc-blog.com/apex-legends-calculator/ to find your own values)
-  mouse_zoomed_sensitivity_scalar_0 		"1.092857"  	 // # These are dependant on sens and fov, so use the calculator linked above
-  mouse_zoomed_sensitivity_scalar_1  		"0.702902"   	 // # 
-  mouse_zoomed_sensitivity_scalar_2  		"0.478591"    	 // # 
-  mouse_zoomed_sensitivity_scalar_3 		"0.361704"	 // # 
-  mouse_zoomed_sensitivity_scalar_4 		"0.242482"	 // # 
-  mouse_zoomed_sensitivity_scalar_5 		"0.182220"       // # 
-  mouse_zoomed_sensitivity_scalar_6 		"0.145909"	 // # 
-  mouse_zoomed_sensitivity_scalar_7 		"1.0"		 // # 
-  								 // #
+  cl_fovScale 					"1.2857"	 // # 90 	FOV 
+//cl_fovScale 					"1.4857"	 // # 104 	FOV 
+//cl_fovScale 					"1.5714"	 // # 110 	FOV	
+  mouse_use_per_scope_sensitivity_scalars 	"1"              // # disable for regular sens to scale (incorrectly) 
+  mouse_zoomed_sensitivity_scalar_0 		"1.092857"  	 // # or plug in settings to https://jscalc-blog.com/apex-legends-calculator/ 
+  mouse_zoomed_sensitivity_scalar_1 		"0.877207"   	 // # to find your own values 
+  mouse_zoomed_sensitivity_scalar_2 		"0.508458"    	 // # These are dependant on sens and fov, so use the calculator linked above
+  mouse_zoomed_sensitivity_scalar_3 		"0.334022"	 // # 
+  mouse_zoomed_sensitivity_scalar_4 		"0.249225"    	 // # 
+  mouse_zoomed_sensitivity_scalar_5 		"0.165537"       // # 
+  mouse_zoomed_sensitivity_scalar_6 		"0.123992"       // # 
+  mouse_zoomed_sensitivity_scalar_7 		"0.099134"       // # 
+                                                                 // #
 // #------------------------------------------------------------ // #
 // #                             Hud                             // #
 // #------------------------------------------------------------ // #
                                                                  // #
-  damage_indicator_style_pilot                  "3"              // # (0) 2d, (1) = 2d/3d both,  (3) 3d
-  hud_setting_damageIndicatorStyle              "0"              // # crosshair damage feedback 0 off, 1 x, 2 X w/shield icon
-  hud_setting_damageTextStyle                   "1"              // # damage numbers,  (0) off, (1) stacking, (2) floating, (3) both
-  hud_setting_minimapRotate                     "1"              // # rotate minimap (0)off, (1)on
-  hud_setting_pingAlpha                         "0.45"           // # ping transparency
-  sprint_view_shake_style			"1"              // #
-  sidearmSwapSelectCooldown			"0.1"            // #
-  sidearmSwapSelectDoubleTapTime		"0.1"            // #
-  hud_setting_accessibleChat			"0"              // #
-  hud_setting_adsDof				"0"              // #
-  hud_setting_compactOverHeadNames		"0"              // #
-  hud_setting_damageIndicatorStyle		"0"              // #
-  hud_setting_enableModWheel			"0"              // #
-  hud_setting_healthUseOnHold			"0"              // #
-  hud_setting_healthWheelToggle			"0"              // #
-  hud_setting_healthWheelUseOnRelease		"0"              // #
-  hud_setting_lootPromptStyle			"0"              // #
-  hud_setting_ordnanceUseOnHold	 		"0"              // #
-  hud_setting_ordnanceWheelToggle 		"0"              // #
-  hud_setting_ordnanceWheelUseOnRelease 	"0"              // #
-  hud_setting_pingDoubleTapEnemy	 	"1"              // #
-  hud_setting_pingWheelToggle 			"0"              // #
-  hud_setting_showButtonHints 			"0"              // #
-  hud_setting_showCallsigns 			"1"              // #
-  hud_setting_showLevelUp 			"1"              // #
-  hud_setting_showMedals 			"0"              // #
-  hud_setting_showMeter				"1"              // #
-  hud_setting_showObituary			"1"              // #
-  hud_setting_showTips				"0"              // #
-  hud_setting_showWeaponFlyouts			"0"              // #
+  damage_indicator_style_pilot                   "3"             // # (0) 2d, (1) = 2d/3d both,  (3) 3d
+  hud_setting_damageIndicatorStyle               "0"             // # crosshair damage feedback 0 off, 1 x, 2 X w/shield icon
+  hud_setting_damageTextStyle                    "1"             // # damage numbers,  (0) off, (1) stacking, (2) floating, (3) both
+  hud_setting_minimapRotate                      "1"             // # rotate minimap (0)off, (1)on
+  hud_setting_pingAlpha                          "0.45"          // # ping transparency
+  sprint_view_shake_style 			 "1"             // #
+  sidearmSwapSelectCooldown 			 "0.1"           // #
+  sidearmSwapSelectDoubleTapTime 		 "0.1"           // #
+  hud_setting_accessibleChat 			 "0"             // #
+  hud_setting_adsDof 				 "0"             // #
+  hud_setting_compactOverHeadNames 		 "0"             // #
+  hud_setting_damageIndicatorStyle 		 "0"             // #
+  hud_setting_enableModWheel 			 "0"             // #
+  hud_setting_healthUseOnHold 			 "0"             // #
+  hud_setting_healthWheelToggle 		 "0"             // #
+  hud_setting_healthWheelUseOnRelease 		 "0"             // #
+  hud_setting_lootPromptStyle 			 "0"             // #
+  hud_setting_ordnanceUseOnHold 		 "0"             // #
+  hud_setting_ordnanceWheelToggle 		 "0"             // #
+  hud_setting_ordnanceWheelUseOnRelease 	 "0"             // #
+  hud_setting_pingDoubleTapEnemy 		 "1"             // #
+  hud_setting_pingWheelToggle 			 "0"             // #
+  hud_setting_showButtonHints 			 "0"             // #
+  hud_setting_showCallsigns 			 "1"             // #
+  hud_setting_showLevelUp 			 "1"             // #
+  hud_setting_showMedals 			 "0"             // #
+  hud_setting_showMeter 			 "1"             // #
+  hud_setting_showObituary 			 "1"             // #
+  hud_setting_showTips 				 "0"             // #
+  hud_setting_showWeaponFlyouts 		 "0"             // #
                                                                  // #
 // #------------------------------------------------------------ // #
 // #                            Misc                             // #
@@ -74,58 +74,58 @@
 // #                               Net                           // #
 // # ----------------------------------------------------------- // #
 								 // #
-  rate						"128000"	 // #
-//cl_cmdbackup					"2" 		 // # default
-//cl_resend					"0.5"		 // # default
-  cl_interp					"0"		 // #
-  cl_interp_ratio				"2" 		 // #
-//cl_interp_all					"0" 	 	 // #
-  cl_interpolate				"1" 	 	 // #
-//cl_interpolation_before_prediction		"0" 	 	 // #
-  cl_cmdrate					"120"		 // # default 60
-  cl_updaterate_mp				"60" 		 // # default 20
-  match_updateRate				"60" 		 // #
-  cl_updatevisibility				"1" 		 // #
-  cl_timeout					"30" 		 // #
-  net_compresspackets				"0" 		 // #
-  cl_smooth	 				"0"		 // #
-  cl_smoothtime	 				"0.01"		 // #
-  cl_pred_optimize 				"1"		 // #
-  cl_wpn_sway_interp	 			"0"		 // #
-  cl_lagcompensation 				"1"		 // #
-  net_compresspackets_minsize	 		"128"		 // #
-  net_maxcleartime 				"0.020346"	 // #
-  host_limitlocal 				"0"		 // #
-  origin_presense_updateRate 			"10"		 // #
-  intro_viewed	 				"1"		 // #
-  in_usekeyboardsampletime 			"0"		 // #
-  filesystem_buffer_size 			"8192"		 // #
-  filesystem_max_stdio_read 			"32"		 // #
+  rate 					"128000"		 // #
+//cl_cmdbackup 				"2" 			 // # default
+//cl_resend 				"0.5"			 // # default
+  cl_interp 				"0"			 // #
+  cl_interp_ratio 			"2" 			 // #
+//cl_interp_all 			"0" 	 	 	 // #
+  cl_interpolate 			"1" 	 	 	 // #
+//cl_interpolation_before_prediction 	"0" 	 	         // #
+  cl_cmdrate 				"120"			 // # default 60
+  cl_updaterate_mp 			"60" 			 // # default 20
+  match_updateRate 			"60" 			 // #
+  cl_updatevisibility 			"1" 		 	 // #
+  cl_timeout 				"30" 			 // #
+  net_compresspackets 			"0" 			 // #
+  cl_smooth 				"0"			 // #
+  cl_smoothtime 			"0.01"			 // #
+  cl_pred_optimize 			"1"			 // #
+  cl_wpn_sway_interp 			"0"			 // #
+  cl_lagcompensation 			"1"			 // #
+  net_compresspackets_minsize 		"128"			 // #
+  net_maxcleartime 			"0.020346"		 // #
+  host_limitlocal 			"0"			 // #
+  origin_presense_updateRate 		"10"			 // #
+  intro_viewed 				"1"			 // #
+  in_usekeyboardsampletime 		"0"			 // #
+  filesystem_buffer_size 		"8192"			 // #
+  filesystem_max_stdio_read 		"32"			 // #
 								 // #
 // # ----------------------------------------------------------- // #
 // #                             Audio                           // #
 // # ----------------------------------------------------------- // #
                                                                  // #
-  miles_channels				"2"		 // #
-  miles_occlusion				"0" 		 // #
-  miles_occlusion_force				"0"		 // #
-  miles_occlusion_partial			"0"	    	 // # Maximum number of sounds per server frame.
-  miles_max_sounds_per_server_frame		"400"		 // # Default 50
-  cl_footstep_event_max_dist			"5000"	  	 // # Default 2500. Set the max distance from where footsteps can be heard. 
-  miles_occlusion				"0"		 // # When nonzero, perform occlusion checks.
-  miles_occlusion_force				"0"		 // # 0 to 100: Force all sounds to have occlusion values of 0 (unoccluded) to 100 (completely occluded). -1 for normal.
-  miles_occlusion_partial			"0"		 // # When zero, occlusion state is binary. When nonzero, allow partial occlusion of audio.
-  snd_mixahead					"0.05"		 // #
-  snd_headphone_pan_exponent			"2"		 // #
-  snd_musicvolume				"0"		 // #
-  snd_setmixer PlayerFootsteps vol		"0.1"		 // #
-  snd_setmixer GlobalFootsteps vol		"1.2" 		 // #
+  miles_channels 			"2"			 // #
+  miles_occlusion 			"0" 			 // #
+  miles_occlusion_force 		"0"			 // #
+  miles_occlusion_partial 		"0"	    		 // # Maximum number of sounds per server frame.
+  miles_max_sounds_per_server_frame 	"400"			 // # Default 50
+  cl_footstep_event_max_dist 		"5000"	  		 // # Default 2500. Set the max distance from where footsteps can be heard. 
+  miles_occlusion 			"0"			 // # When nonzero, perform occlusion checks.
+  miles_occlusion_force 		"0"			 // # 0 to 100: Force all sounds to have occlusion values of 0 (unoccluded) to 100 (completely occluded). -1 for normal.
+  miles_occlusion_partial 		"0"			 // # When zero, occlusion state is binary. When nonzero, allow partial occlusion of audio.
+  snd_mixahead 				"0.05"			 // #
+  snd_headphone_pan_exponent 		"2"			 // #
+  snd_musicvolume 			"0"			 // #
+  snd_setmixer PlayerFootsteps vol 	"0.1"			 // #
+  snd_setmixer GlobalFootsteps vol 	"1.2" 			 // #
                                                                  // #
 // # ----------------------------------------------------------- // #
 // #                           Privacy                           // #
 // # ----------------------------------------------------------- // #
                                                                  // #
-  telemetry_client_enable			"0"		 // #
-  telemetry_client_sendInterval			"0"		 // #
-  pin_opt_in					"0"		 // #
+  telemetry_client_enable 		"0"			 // #
+  telemetry_client_sendInterval 	"0"			 // #
+  pin_opt_in 				"0"			 // #
 // # ----------------------------------------------------------- // #
